--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "antd": "^4.23.2",
     "axios": "^0.27.2",
     "classnames": "^2.3.2",
+    "moment": "^2.29.4",
     "normalize.css": "^8.0.1",
     "query-string": "^7.1.1",
     "react": "^18.2.0",
